--- a/css/styles.css
+++ b/css/styles.css
@@ -13,15 +13,14 @@ body {
 }
 
 .tabs {
-	border: 1px solid #660204; /* D3DEE0 */
+	border: 1px solid #00000; /* D3DEE0 */
 	display: inline-block;
 	padding: 0;
 	border-radius: 3px;
-	font-size: 0px;
+	font-size: 67;
 }
 
 .tabs li {
-	display: inline-block;
 	font-size: 14px;
 }
 
@@ -36,6 +35,18 @@ body {
 }
 
 .tabs li:hover a, 
+.tabs .now-active a {
+	color: #5AAAD3;
+	border: 1px solid #2a80ae;
+}.tabs li:hover a, 
+.tabs .now-active a {
+	color: #5AAAD3;
+	border: 1px solid #2a80ae;
+}.tabs li:hover a, 
+.tabs .now-active a {
+	color: #5AAAD3;
+	border: 1px solid #2a80ae;
+}.tabs li:hover a, 
 .tabs .now-active a {
 	color: #5AAAD3;
 	border: 1px solid #2a80ae;
